<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_folder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/folder_title"
        android:textColor="@color/md_theme_onSurfaceVariant"
        android:background="@color/md_theme_outlineVariant"

        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_sheets_in_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_folder_title"
        app:layout_constraintStart_toStartOf="parent"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
