...
    <string name="sheet_name_taken_err">Sheet name already in use</string>
    <string name="folder_name_taken_err">Folder name already in use</string>
    <string name="rename_nick_empty_err">New nickname cannot be empty</string>
    <string name="error_generic">Unexpected renaming error</string>
    <string name="rename_nick_length_err">New nickname cannot be more than 20 chars long</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_btn">Delete sheet</string>
    <string name="delete_confirm"> Folder was deleted</string>
    <string name="upload">Upload</string>
    <string name="rename_btn">change nickname</string>
    <string name="folder">folder</string>
    <string name="folder_color">folder color</string>
    <string name="melodies">MELODIES</string>
...
